tests/good/typing/029-fun-unification.clap
val f : (int -> int) = fun (x) => x
