tests/bad/lexical/072-fun-1.clap
val f = 
  fun (x : { U }) -> x
 
